tests/type_errors/variant_comparison.nos
# expect: false
# Variants auto-derive Ord by declaration order (not alphabetical)
# Red(0) < Green(1) < Blue(2), so Red > Green is false
type Color = Red | Green | Blue
main() = Red > Green
